--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <font color="#e2ebfe" face="Tahoma" style="FONT-SIZE: 8pt">
                                 <b>
                                     <font color="#666666">© 2024
-                                        Privacy-Preserving Explainble AI </font>
+                                        Privacy-Preserving Explainable AI </font>
                                 </b></font>&nbsp;
                         </td>
                     </tr>
