--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <tr>
                                     <td class="item" style="padding-top: 10px;">
                                         <span><b>Paper:&nbsp;&nbsp;</b></span> <a target="_blank"
-                                            href="https://arxiv.org/abs/XXX">https://arxiv.org/abs/XXX</a>
+                                            href="https://arxiv.org/abs/2404.00673">https://arxiv.org/abs/2404.00673</a>
                                     </td>
                                 </tr>
                             </table>
