--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <img class="center" src="images/taxonomy.png" alt="" border=0  ></img>
+                                        <img class="center" src="images/taxonomy1.png" alt="" border=0  ></img>
                                     </td>
                                 </tr>
                                 <tr>
