--- a/index.html
+++ b/index.html
@@ -497,6 +497,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </td>
         </tr>
     </table>
+    <a href="https://info.flagcounter.com/1vAj"><img src="https://s11.flagcounter.com/count2/1vAj/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 </body>
 
 </html>
